kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goclone
  labels:
    istio-injection: enabled
