kubernetes/deployment-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goclone-testing
  namespace: goclone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goclone
      version: testing
  template:
    metadata:
      labels:
        app: goclone
        version: testing
    spec:
      containers:
        - name: goclone
          image: evanjd711/goclone:testing
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
          imagePullPolicy: Always
