kubernetes/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goclone-v2
  namespace: goclone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goclone
      version: v2
  template:
    metadata:
      labels:
        app: goclone
        version: v2
    spec:
      containers:
        - name: goclone
          image: evanjd711/goclone:2.0.0
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v2/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
          imagePullPolicy: Always
