kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goclone-v1
  namespace: goclone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goclone
      version: v1
  template:
    metadata:
      labels:
        app: goclone
        version: v1
        istio: monitor
    spec:
      containers:
        - name: goclone
          image: evanjd711/goclone:1.0.1
          ports:
            - name: http
              containerPort: 8080
