kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goclone-svc
  namespace: goclone
  annotations:
    external-dns.alpha.kubernetes.io/hostname: goclone.sdc.cpp
spec:
  selector:
    app: goclone
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
