kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: goclone-gateway
  namespace: goclone
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "goclone.sdc.cpp"
